@@ -25,6 +25,8 @@ dont_give_king_names_in_non_regicide_games = true
 ; Removes option to automate workers from the human player. Useful for those who never want to use automation but sometimes accidentally activate it.
 disable_worker_automation = false
 
+suppress_hypertext_links_exceeded_popup = true
+
 [=======================]
 [=== AI ENHANCEMENTS ===]
 [=======================]
